--- a/client/templates/query.html
+++ b/client/templates/query.html
@@ -1,4 +1,22 @@
-<div class="search-time">Query completed in {{ time_ms }} ms<div>
-{% for doc in documents %}
-<div class="search-result">{{ loop.index }} - {{ doc.path }}</div>
-{% endfor %}
+<div>
+
+    <!-- Title -->
+    <h1 class="text-xl"> Search results</h1>
+    <h1 class=" font-light text-sm  mt-1 mb-6">Query time: {{ time_ms }}ms</h1>
+
+    <!-- Documents -->
+    {% for doc in documents %}
+
+    <div>
+        <div class="bg-neutral-800 p-4 rounded-md shadow-md mb-6">
+            <h2 class="text-xl font-semibold mb-2">
+                {{ doc.path }}
+            </h2>
+            <p class="text-neutral-300">
+                {{ doc.content }}
+            </p>
+        </div>
+    </div>
+    {% endfor %}
+
+</div>
