--- a/server/templates/query.html
+++ b/server/templates/query.html
@@ -8,15 +8,16 @@
     {% for doc in documents %}
 
     <div>
-        <div class="bg-neutral-800 p-4 rounded-md shadow-md mb-6">
-            <h2 class="text-xl font-semibold mb-2">
+        <div class="bg-neutral-800 p-6 rounded-md shadow-md mb-6">
+            <h2 class="text-xl font-semibold mb-4">
                 {{ doc.path }}
             </h2>
             <p class="text-neutral-300">
-                {{ doc.content }}
+                {{ doc.content|truncate(300) }}
             </p>
         </div>
     </div>
+
     {% endfor %}
 
 </div>
