--- a/server/templates/query.html
+++ b/server/templates/query.html
@@ -23,20 +23,20 @@
     {% for doc in documents %}
 
 
-    <div id="{{doc.path}}" class="toggle-container">
-        <div id="{{doc.path}}_closed" class="bg-neutral-800 p-6 rounded-md shadow-md mb-6">
+    <div id="{{doc.path}}" class="toggle-container bg-white dark:bg-neutral-800 p-6 rounded-md mb-6">
+        <div id="{{doc.path}}_closed">
             <h2 class="text-xl font-semibold mb-4">
                 {{ doc.path }}
             </h2>
-            <p class="text-neutral-300">
+            <p>
                 {{ doc.content|truncate(150) }}
             </p>
         </div>
-        <div id="{{doc.path}}_open" class="bg-neutral-800 p-6 rounded-md shadow-md mb-6" style="display:none;">
+        <div id="{{doc.path}}_open" style="display:none;">
             <h2 class="text-xl font-semibold mb-4">
                 {{ doc.path }}
             </h2>
-            <p class="text-neutral-300">
+            <p>
                 {{ doc.content }}
             </p>
         </div>
