--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -47,7 +47,7 @@
     <title>search-rs</title>
 </head>
 
-<body class=" dark bg-neutral-100 dark:bg-neutral-900 text-neutral-700 dark:text-white">
+<body class=" dark white dark:bg-neutral-900 text-neutral-900 dark:text-white">
 
     <!-- Main Content -->
     <div class="container mx-auto mt-16 max-w-3xl">
@@ -67,7 +67,7 @@
         <div class="mb-6">
             <h1 class="text-3xl font-medium mb-10">Index on {{index_path}}</h1>
             <input type="text"
-                class="outline-neutral-300 dark:outline-neutral-900 w-full p-4 rounded-md dark:bg-neutral-200 dark:bg-neutral-800"
+                class="outline-neutral-300 dark:outline-neutral-900 w-full p-4 rounded-md bg-neutral-100 dark:bg-neutral-800"
                 placeholder="Enter your search query..." autofocus name="query" hx-post="/query" hx-ext='json-enc'
                 hx-target=".search-results" hx-trigger="keyup[keyCode==13]">
         </div>
