--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -62,7 +62,7 @@
     <title>search-rs</title>
 </head>
 
-<body class=" dark white dark:bg-neutral-900 text-neutral-900 dark:text-white ">
+<body class=" dark white dark:bg-zinc-900 text-zinc-900 dark:text-white ">
 
     <!-- Main Content -->
     <div class="container mx-auto mt-8 max-w-6xl">
@@ -82,7 +82,7 @@
         <div class="mb-6">
             <h1 class="text-3xl font-medium mb-10">Index on {{index_path}}</h1>
             <input type="text"
-                class="outline-neutral-300 dark:outline-neutral-900 w-full p-4 rounded-md bg-neutral-100 dark:bg-neutral-800"
+                class="outline-zinc-300 dark:outline-zinc-900 w-full p-4 rounded-md bg-zinc-100 dark:bg-zinc-800"
                 placeholder="Enter your search query..." autofocus name="query" hx-post="/query"
                 hx-target=".search-results" hx-trigger="keyup[keyCode==13]">
         </div>
@@ -94,7 +94,7 @@
     </div>
 
     <div id="to-top"
-        class="hidden fixed flex bottom-16 right-16 h-16 w-16 rounded-full justify-center items-center hover:cursor-pointer bg-neutral-100 hover:bg-neutral-200 dark:bg-neutral-800 dark:hover:bg-neutral-700 ">
+        class="hidden fixed flex bottom-16 right-16 h-16 w-16 rounded-full justify-center items-center hover:cursor-pointer bg-zinc-100 hover:bg-zinc-200 dark:bg-zinc-800 dark:hover:bg-zinc-700 ">
         <i class="fas fa-caret-up text-2xl"></i>
     </div>
 
