--- a/server/templates/query.html
+++ b/server/templates/query.html
@@ -24,7 +24,7 @@
 
 
     <div id="{{doc.path}}"
-        class="toggle-container hover:cursor-pointer bg-neutral-100 dark:bg-neutral-800 hover:bg-neutral-200 hover:dark:bg-neutral-700 p-6 rounded-md mb-6">
+        class="toggle-container hover:cursor-pointer bg-zinc-100 dark:bg-zinc-800 hover:bg-zinc-200 hover:dark:bg-zinc-700 p-6 rounded-md mb-6">
         <div id="{{doc.path}}_closed">
             <h2 class="text-xl font-semibold mb-4">
                 {{ doc.path }}
